--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 <a
                                     class="btn btn-primary"
                                     href="resume.pdf"
-                                    download="Devansh_Choudhary_Resume.pdf"
+                                    download="Resume.pdf"
                                     target="_blank"
                                     aria-label="Download Resume"
                                 >
