--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <div class="btn-group">
                                 <a
                                     class="btn btn-primary"
-                                    href="resume.pdf"
+                                    href="Resume.pdf"
                                     download="Resume.pdf"
                                     target="_blank"
                                     aria-label="Download Resume"
