--- a/index.html
+++ b/index.html
@@ -35,15 +35,16 @@
                                 Computer Science undergraduate skilled in full-stack web development, blockchain DApps, and AI solutions. Experienced in building responsive applications using React, JavaScript, Python, and Solidity.
                             </div>
                             <div class="btn-group">
-                                <a
+                              <a
                                     class="btn btn-primary"
-                                    href="Resume.pdf"
-                                    download="Resume.pdf"
+                                   href="Resume.pdf"
+                                    download="Devansh_Choudhary_Resume.pdf"
                                     target="_blank"
                                     aria-label="Download Resume"
                                 >
-                                    <i class="fa-solid fa-file-arrow-down" style="margin-right:8px"></i>Resume
+                            <i class="fa-solid fa-file-arrow-down" style="margin-right:8px"></i>Resume
                                 </a>
+                                  
                                 <button
                                     class="btn btn-secondary"
                                     onclick="window.location.href='#projects'"
