--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <div class="btn-group">
                               <a
                                     class="btn btn-primary"
-                                   href="ResumeN.pdf"
+                                   href="Resume_FS.pdf"
                                     download="Devansh_Choudhary_Resume.pdf"
                                     target="_blank"
                                     aria-label="Download Resume"
